<resources>
    <string name="app_name">My Money</string>
    <string name="welcome">Welcome</string>
    <string name="choose_you_currency_sign">Choose you currency sign</string>
    <string name="you_can_also_change_currency_sign_later">You can also change currency sign later</string>
    <string name="next">Next</string>
    <string name="alert_sign">alert_sign</string>
    <string name="remind_everyday_to_add_your_exoenese">Remind everyday to add your exoenese</string>
    <string name="show_a_reminder_everyday">Show a reminder everyday</string>
    <string name="reminder_image">Reminder_image</string>
    <string name="reminder_description">Turn on reminder to get daily notification for adding expense. You can always change it later</string>
    <string name="back">Back</string>
    <string name="mymoney">mymoney</string>
    <string name="usage_statistics_and_crash_reports">Help improve MyMoney by sending\n usage statistics and crash reports.</string>
    <string name="send_crash_report_and_statistics">Send crash report and statistics</string>
    <string name="when_turned_on_usage_statistics_and_crash_reports_will_be_sent_automaticlly">When turned on, usage statistics and crash reports will be sent automaticlly</string>
    <string name="by_continunig_you_agree_to_mymoney_s_terms_privacy_policy"><![CDATA[By continuing, you agree to MyMoney\'s \n Terms & Privacy Policy]]></string>
    <string name="records">Records</string>
    <string name="analyse">Analyse</string>
    <string name="budget">Budget</string>
    <string name="accounts">Accounts</string>
    <string name="categories">Gemnini</string>
    <string name="records_fragment">Records Fragment</string>
    <string name="prev_day">prv\n</string>
    <string name="december_7_2024">December 7, 2024</string>
    <string name="next_day" />
    <string name="income_n">Income</string>
    <string name="expense_n">Expense</string>
    <string name="input_button">Input Button</string>
    <string name="Confirm">Confirm</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="cancel">Cancel</string>
    <string name="selected_date_and_time_will_be_displayed_here">Selected Date and Time will be displayed here</string>
    <string name="income">Income</string>
    <string name="notes">Notes</string>
    <string name="_0">0</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="Enter_Amount">Enter Amount</string>

    <string name="create_account">Create Account</string>
    <string name="create_account_description">Create an account so you can\n explore all the existing jobs</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="continue_with">Continue with</string>
    <string name="github">Github</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="login_here">Login Here</string>
    <string name="welcome_back_you_have_been_missed">Welcome back you have been missed</string>
    <string name="log_in">Log In</string>
    <string name="create_account_login">Create account</string>
    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="avatar">Avatar</string>
    <string name="take_picture">Take Picture</string>
    <string name="captured_image">Captured Image</string>
    <string name="item">Item</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="default_web_client_id">323408101967-52vagrehufn8lmojddko664p9fhth4s7.apps.googleusercontent.com</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="our_location">Our Location</string>
    <string name="drawer_icon">Open Navigation Drawer</string>
    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <string name="total">Total</string>
    <string name="MAPS_API_KEY">AIzaSyBNZ14Hol8Y61hI5ykjTLHb9c1MmZq7Qmc</string>
    <string name="Gemini_API_Key">AIzaSyBHYyZXTHjrfC2_bXsOsN4qveDZ8VzAcfg</string>

</resources>