<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <!-- Type TextView (tv_record_type) -->
    <TextView
        android:id="@+id/tv_record_type"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="16sp"
        android:padding="10dp"

        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Amount TextView (tv_record_amount) -->
    <TextView
        android:id="@+id/tv_record_amount"
        android:layout_width="0dp"
        android:padding="10dp"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:textSize="14sp"
        android:textColor="#666666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_record_type"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Date TextView (tv_record_date) -->
    <TextView
        android:id="@+id/tv_record_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="14sp"
        android:textColor="#666666"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_record_amount"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Description TextView (tv_record_description) -->
    <TextView
        android:id="@+id/tv_record_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="14sp"
        android:padding="10dp"

        android:textColor="#666666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_record_date"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
