<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/log_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    >

    <TextView
        android:id="@+id/textView_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_here"
        android:textColor="@color/white"
        android:shadowColor="@color/white"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="70dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:text="@string/welcome_back_you_have_been_missed"
        app:layout_constraintTop_toBottomOf="@id/textView_log_in"
        app:layout_constraintStart_toStartOf="@id/textView_log_in"
        app:layout_constraintEnd_toEndOf="@id/textView_log_in"
        />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:autofillHints="emailAddress"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/textView_description"
        app:layout_constraintStart_toStartOf="@id/textView_description"
        app:layout_constraintEnd_toEndOf="@id/textView_description"
        />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_marginTop="28dp"
        android:padding="10dp"

        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:maxWidth="300dp"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_log_in" />

    <TextView
        android:id="@+id/create_account_log_in_to_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account_login"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/continue_with"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="15sp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>