<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <!-- Title TextView -->
    <TextView
        android:id="@+id/textView_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:padding="10dp"
        android:shadowColor="@color/white"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Description TextView -->
    <TextView
        android:id="@+id/textView_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:text="@string/create_account_description"
        app:layout_constraintTop_toBottomOf="@id/textView_create_account"
        app:layout_constraintStart_toStartOf="@id/textView_create_account"
        app:layout_constraintEnd_toEndOf="@id/textView_create_account" />

    <!-- Name EditText -->
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/textView_description"
        app:layout_constraintStart_toStartOf="@id/textView_description"
        app:layout_constraintTop_toBottomOf="@id/textView_description" />

    <!-- Name Error Icon -->
    <ImageView
        android:id="@+id/error_icon_name"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/alert"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/editTextName"
        app:layout_constraintTop_toTopOf="@id/editTextName"
        app:layout_constraintBottom_toBottomOf="@id/editTextName" />

    <!-- Email EditText -->
    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="28dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/editTextName"
        app:layout_constraintStart_toStartOf="@id/editTextName"
        app:layout_constraintTop_toBottomOf="@id/editTextName" />

    <!-- Email Error Icon -->
    <ImageView
        android:id="@+id/error_icon_email"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/alert"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/editTextTextEmailAddress"
        app:layout_constraintTop_toTopOf="@id/editTextTextEmailAddress"
        app:layout_constraintBottom_toBottomOf="@id/editTextTextEmailAddress" />

    <!-- Password EditText -->
    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@id/editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/editTextTextEmailAddress" />

    <!-- Password Error Icon -->
    <ImageView
        android:id="@+id/error_icon_password"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/alert"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="@id/editTextTextPassword"
        app:layout_constraintBottom_toBottomOf="@id/editTextTextPassword" />

    <!-- Sign Up Button -->
    <Button
        android:id="@+id/button_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:maxWidth="300dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.733"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.129" />

    <!-- Continue with Google Button -->
    <Button
        android:id="@+id/button_continue_with_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:maxWidth="300dp"
        android:text="@string/continue_with_google"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/already_have_account_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

    <!-- TextView for Existing Account -->
    <TextView
        android:id="@+id/already_have_account_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_continue_with_google" />

</androidx.constraintlayout.widget.ConstraintLayout>
