<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="16dp">


        <!-- Cross Button (left) -->
        <ImageButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/cancel"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Tick Button (right) -->
        <ImageButton
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_save"
            android:contentDescription="@string/Confirm"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <!-- Selected Date and Time TextView -->

    <ImageButton
        android:id="@+id/btn_prev_day"
        android:layout_width="37dp"
        android:layout_height="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/prev_day"
        android:src="@drawable/left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cancel" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="251dp"
        android:layout_height="34dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:text="@string/december_7_2024"
        android:textAlignment="center"
        android:textColor="#00796b"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/btn_prev_day"
        app:layout_constraintTop_toBottomOf="@id/btn_cancel" />

    <ImageButton
        android:id="@+id/btn_next_day"
        android:layout_width="32dp"
        android:layout_height="26dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="36dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/next_day"
        android:src="@drawable/right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_cancel" />

    <TextView
            android:id="@+id/tv_selected_date_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#000000"
            android:textSize="14sp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date"
            android:gravity="center" />


        <!-- Income/Expense Button -->
    <Spinner
        android:id="@+id/spinner_income_expense"
        android:layout_width="377dp"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_selected_date_time" />


    <!-- Account Spinner -->
        <Spinner
            android:id="@+id/spinner_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spinner_income_expense"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="10dp"
            android:layout_marginTop="16dp" />

        <!-- Category Spinner -->
        <Spinner
            android:id="@+id/spinner_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/spinner_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="10dp"
            android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/editText_amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Enter_Amount"
        android:inputType="numberDecimal"
        android:gravity="top"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
        <!-- Notes Section -->
        <EditText
            android:id="@+id/editText_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/notes"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:layout_marginTop="16dp"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/editText_amount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:minHeight="100dp" />

        <!-- Simple Calculator -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/editText_notes">
            <TextView
                android:id="@+id/tv_records"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/records_fragment"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvRecords"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingTop="8dp" />
            <!-- Calculator Display -->
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

